cabal-version: 2.4
name: advent-of-code
version: 0.1.0.0

extra-source-files:
    README.md

common common-properties
    default-language: Haskell2010
    ghc-options:
        -Wall -Werror -O2
    build-depends:
        base,
        containers,
        split,
        text

executable aoc
    import: common-properties
    main-is: Main.hs
    hs-source-dirs: app/AoC
    build-depends:
        advent-of-code,
        optparse-applicative

library
    import: common-properties
    exposed-modules:
        Day01.Solution,
        Day02.RockPaperScissors,
        Day03.Rucksack
    hs-source-dirs: src
    build-depends:
        megaparsec


test-suite test
    import: common-properties
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Day01.SolutionSpec,
        Day02.RockPaperScissorsSpec
        Day03.RucksackSpec
    hs-source-dirs: test
    build-depends:
        advent-of-code,
        hspec
    build-tool-depends:
        hspec-discover:hspec-discover
