cabal-version: 2.4
name: advent-of-code
version: 0.1.0.0

extra-source-files:
    README.md

common common-properties
    default-language: Haskell2010
    ghc-options:
        -Wall -Werror -O2
    build-depends:
        base,
        containers,
        extra,
        split,
        text,
        vector

executable aoc
    import: common-properties
    main-is: Main.hs
    hs-source-dirs: app/AoC
    build-depends:
        advent-of-code,
        optparse-applicative

library
    import: common-properties
    exposed-modules:
        AoC.Puzzle,
        Day01.Calories,
        Day02.RockPaperScissors,
        Day03.Rucksack,
        Day04.Cleanup,
        Day05.SupplyStacks,
        Day06.Tuning,
        Day07.NoSpace,
        Day08.TreeHouse,
        Day09.RopeBridge,
        Day10.CathodeRayTube,
        Day11.KeepAway,
        Day11.Monkey,
        Day12.HillClimbing,
        Day13.DistressSignal
    hs-source-dirs: src
    build-depends:
        megaparsec


test-suite test
    import: common-properties
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Day01.CaloriesSpec,
        Day02.RockPaperScissorsSpec,
        Day03.RucksackSpec,
        Day04.CleanupSpec,
        Day05.SupplyStacksSpec,
        Day06.TuningSpec,
        Day07.NoSpaceSpec,
        Day08.TreeHouseSpec,
        Day09.RopeBridgeSpec,
        Day10.CathodeRayTubeSpec,
        Day11.KeepAwaySpec,
        Day12.HillClimbingSpec,
        Day13.DistressSignalSpec
    hs-source-dirs: test
    build-depends:
        advent-of-code,
        hspec
    build-tool-depends:
        hspec-discover:hspec-discover
